V2.0 CALI Edits on pub pages and example
